# static-server

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  main.cpp
server/: CMakeLists.txt  FileHandler.cpp  FileHandler.hpp  Header.hpp  Request.hpp  RequestParser.cpp  RequestParser.hpp  Response.cpp  Response.hpp  Server.cpp  Server.hpp  mime_types.cpp  mime_types.hpp
